2005-06-04  Manish Singh  <yosh@gimp.org>

	* libgimp/gimpimagecombobox.h
	* libgimp/gimpdrawablecombobox.h: fix the type macros so they work.

2005-06-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainerview.h: don't include gimpeditor.h.

	* app/widgets/gimpbufferview.c
	* app/widgets/gimpdocumentview.c
	* app/widgets/gimpfontview.c: include it here instead.

2005-06-04  Sven Neumann  <sven@gimp.org>

	* app/actions/dockable-actions.c
	* app/actions/dockable-commands.[ch]
	* app/widgets/gimpeditor.[ch]
	* app/widgets/gimphelp-ids.h
	* menus/dockable-menu.xml.in: allow to show/hide the button-bar in
	GimpEditor. Should be merged into the GimpDocked interface.

2005-06-04  Manish Singh  <yosh@gimp.org>

	* plug-ins/helpbrowser/dialog.c: define _O_BINARY ourselves if
	it's not defined by any headers, and use that instead of #ifdefed
	calls to g_open.

2005-06-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpwidgets-utils.c (gimp_text_buffer_load):
	validate the iter after appending to the text buffer.

2005-06-04  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpmagnifytool.c (gimp_magnify_tool_button_release):
	fix calculation of zoom offsets in the case that dot-for-dot mode
	is not enabled (bug #306476).

2005-06-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdnd.c (gimp_dnd_get_viewable_icon): use the
	viewable's description in the drag icon. Use a larger preview.

	* app/widgets/gimpdockbook.c: tweak spacing and border-width of
	the tab widget if it is being used as drag icon.

2005-06-04  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorarea.[ch]: invalidate the buffer when
	the widget's sensitivity changes. Draw a stipple pattern on the
	insensitive color area.

	* libgimpwidgets/gimpcellrenderercolor.c: follow internal API change.

	* libgimpwidgets/gimpcolorbutton.c: pass GDK_BUTTON1_MASK as
	drag-mask. Doesn't work for whatever reason but it didn't work
	with GDK_BUTTON2_MASK either.
