@@ -21,6 +21,8 @@
 
 #include "config.h"
 
+#include <string.h>
+
 #include <gtk/gtk.h>
 
 #include "widgets-types.h"
@@ -29,6 +31,7 @@
 #include "core/gimpmarshal.h"
 
 #include "gimpdocked.h"
+#include "gimpsessioninfo.h"
 
 
 enum
@@ -38,7 +41,12 @@ enum
 };
 
 
-static void  gimp_docked_iface_base_init (GimpDockedInterface *docked_iface);
+static void    gimp_docked_iface_base_init    (GimpDockedInterface *docked_iface);
+
+static void    gimp_docked_iface_set_aux_info (GimpDocked          *docked,
+                                               GList               *aux_info);
+static GList * gimp_docked_iface_get_aux_info (GimpDocked          *docked);
+
 
 
 static guint docked_signals[LAST_SIGNAL] = { 0 };
@@ -74,6 +82,12 @@ gimp_docked_iface_base_init (GimpDockedInterface *docked_iface)
 {
   static gboolean initialized = FALSE;
 
+  if (! docked_iface->get_aux_info)
+    {
+      docked_iface->get_aux_info = gimp_docked_iface_get_aux_info;
+      docked_iface->set_aux_info = gimp_docked_iface_set_aux_info;
+    }
+
   if (! initialized)
     {
       docked_signals[TITLE_CHANGED] =
@@ -87,6 +101,41 @@ gimp_docked_iface_base_init (GimpDockedInterface *docked_iface)
 
       initialized = TRUE;
     }
+}
+
+#define AUX_INFO_SHOW_BUTTON_BAR "show-button-bar"
+
+static void
+gimp_docked_iface_set_aux_info (GimpDocked *docked,
+                                GList      *aux_info)
+{
+  GList *list;
+
+  for (list = aux_info; list; list = g_list_next (list))
+    {
+      GimpSessionInfoAux *aux = list->data;
+
+      if (strcmp (aux->name, AUX_INFO_SHOW_BUTTON_BAR) == 0)
+        {
+          gboolean show = g_ascii_strcasecmp (aux->value, "false");
+
+          gimp_docked_set_show_button_bar (docked, show);
+        }
+    }
+}
+
+static GList *
+gimp_docked_iface_get_aux_info (GimpDocked *docked)
+{
+  if (gimp_docked_has_button_bar (docked) &&
+      ! gimp_docked_get_show_button_bar (docked))
+    {
+      return g_list_append (NULL,
+                            gimp_session_info_aux_new (AUX_INFO_SHOW_BUTTON_BAR,
+                                                       "false"));
+    }
+
+  return NULL;
 }
 
 void
@@ -190,4 +239,48 @@ gimp_docked_set_context (GimpDocked  *docked,
 
   if (docked_iface->set_context)
     docked_iface->set_context (docked, context);
+}
+
+gboolean
+gimp_docked_has_button_bar (GimpDocked *docked)
+{
+  GimpDockedInterface *docked_iface;
+
+  g_return_val_if_fail (GIMP_IS_DOCKED (docked), FALSE);
+
+  docked_iface = GIMP_DOCKED_GET_INTERFACE (docked);
+
+  if (docked_iface->has_button_bar)
+    return docked_iface->has_button_bar (docked);
+
+  return FALSE;
+}
+
+void
+gimp_docked_set_show_button_bar (GimpDocked *docked,
+                                 gboolean    show)
+{
+  GimpDockedInterface *docked_iface;
+
+  g_return_if_fail (GIMP_IS_DOCKED (docked));
+
+  docked_iface = GIMP_DOCKED_GET_INTERFACE (docked);
+
+  if (docked_iface->set_show_button_bar)
+    docked_iface->set_show_button_bar (docked, show ? TRUE : FALSE);
+}
+
+gboolean
+gimp_docked_get_show_button_bar (GimpDocked *docked)
+{
+  GimpDockedInterface *docked_iface;
+
+  g_return_val_if_fail (GIMP_IS_DOCKED (docked), FALSE);
+
+  docked_iface = GIMP_DOCKED_GET_INTERFACE (docked);
+
+  if (docked_iface->get_show_button_bar)
+    return docked_iface->get_show_button_bar (docked);
+
+  return FALSE;
 }
